Updated and fixed CSS format removed old dark mode format. Centered
centered the log in forum and removed the old dark mode.

--- a/app/Views/login/styles.css
+++ b/app/Views/login/styles.css
@@ -52,37 +52,8 @@ h1{
   font-weight: 800;
 }
 
-.flex-container{
-  width: 100vw;
 
-  margin-top: 60px;
 
-  display: flex;
-
-  justify-content: center;
-  align-items: center;
-
-}
-.content-container{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  width: 500px;
-  height: 350px;
-
-  margin-top: 5px;
-  padding-top: 20px;
-
-  border-radius: 12px;
-
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-
-  background: #1f1f1f;
-  box-shadow: 5px 5px 10px rgba(0,0,0,0.199);
-}
 .subtitle{
   font-size: 12px;
 
